--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criptografar texto</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div>
-            <img src="/img/alura.svg" alt="Logo Alura">
+            <img src="img/alura.svg" alt="Logo Alura">
         </div>
         <div class="titulo">
             <h1>Projeto encriptador de texto com Javascript Programa OneAlura</h1>
@@ -34,7 +34,7 @@
         <section>
             <div class="inicio">
                 <div class="imagem">
-                    <img src="/img/High.svg" alt="lupa">
+                    <img src="img/High.svg" alt="lupa">
                     <div>
                         <h2>Nenhuma mensagem encontrada</h2>
                         <p>Digite um texto que você deseja criptografar ou descriptografar</p>
