--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h3>Criado por Marta da Silva Souza</h3>
         <h4>Projeto OneAlura - #challengerOneDecodificador</h4>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
